--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,8 @@
 			<version>2.27</version>
 		</dependency>
 
-		<!-- HSQLDB -->
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.4.1</version>
-		</dependency>
-
+		<!-- Insert MariaDB Here -->
+		
 		<!-- JAXB -->
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
